--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "dotenv": "^16.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-places-autocomplete": "^7.3.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
